# CMakeList.txt : CMake project for AlgorithmsAndDataStructures, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (AlgorithmsAndDataStructures "AlgorithmsAndDataStructures.cpp" "AlgorithmsAndDataStructures.h" "Algorithm.h" "Timer.h"  "RandomNumberGenerator.h" "DistributionType.h")

# TODO: Add tests and install targets if needed.
