set(SOURCE_FILES
    Algorithms/AlgorithmInfo.h
    Algorithms/SearchAlgorithms/BinarySearch.h
    Algorithms/SearchAlgorithms/InterpolationSearch.h
    Algorithms/SearchAlgorithms/JumpSearch.h
    Algorithms/SearchAlgorithms/LinearSearch.h
    Algorithms/SearchAlgorithms/SearchAlgorithm.h
    Algorithms/SortAlgorithms/BubbleSort.h
    Algorithms/SortAlgorithms/HeapSort.h
    Algorithms/SortAlgorithms/InsertionSort.h
    Algorithms/SortAlgorithms/MergeSort.h
    Algorithms/SortAlgorithms/QuickSort.h
    Algorithms/SortAlgorithms/SelectionSort.h
    Algorithms/SortAlgorithms/ShellSort.h
    Algorithms/SortAlgorithms/SortAlgorithm.h
    Algorithms/BigObject.h
    Benchmark/Benchmark.h
    Benchmark/DistributionType.h
    Benchmark/RandomNumberGenerator.h
    Benchmark/SearchAlgorithmsBenchmark.h
    Benchmark/SortAlgorithmsBenchmark.h
    Benchmark/Timer.h
    DataStructures/Queue.h
    DataStructures/Stack.h
    DataStructures/Vector.h
    main.cpp
)

add_executable(AlgorithmsAndDataStructures ${SOURCE_FILES})
